--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  name: MyString
-
-two:
-  name: MyString
+site_a:
+  user: bob
+  name: AA Test 25
+  db_name: site_a
+  db_pass: "n0n-_-exist@nt??"
+  premium: false
+  manual_expire_date: 2012-01-01
