--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,21 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+
+bob:
+  email: bob@mailinator.com
+  encrypted_password: "$2a$10$PoBe1MvkoGJsjMVTEjKqgeBUp.xdfzWoiDjBzQhtLAj16NqIa2fOy"
+  reset_password_token: nil
+  remember_token: nil
+  remember_created_at: nil
+  sign_in_count: 1
+  current_sign_in_at: 2011-01-02 08:31:23
+  last_sign_in_at: 2011-01-02 08:31:23
+  current_sign_in_ip: 127.0.0.1
+  last_sign_in_ip: 127.0.0.1
+  confirmation_token: nil
+  confirmed_at: 2011-01-02 08:31:23
+  confirmation_sent_at: 2011-01-02 08:30:59
+  authentication_token: nil
+  created_at: 2011-01-02 08:30:59
+  updated_at: 2011-01-02 08:31:23
