Added params to database.yml for local host testing. Removed body of santize_illegal_chars from builder_controller.rb becaues it would break the database

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,8 @@ development:
   encoding: unicode
   host: localhost
   database: yomobi_development
+  username: postgres
+  password: sa3abtha
   pool: 5
 
 # Warning: The database defined as "test" will be erased and
