--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,8 @@ test:
   encoding: unicode
   host: localhost
   database: yomobi_test
+  username: postgres
+  password: sa3abtha
   pool: 5
 
 production:
